--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 파비콘 -->
     <link rel="icon" href="img/favicon.ico">
     <title>NARD 나드</title>
     <!-- swiper js -->
@@ -11,11 +12,11 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style.scss">
-
+    <!-- 스크립트 -->
     <script src="lib/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
-
+    <!-- add to cart 클릭 알림창 -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </head>
