--- a/sub/category.html
+++ b/sub/category.html
@@ -25,7 +25,7 @@
         <header id="header" class="header">
             <div class="inner">
                 <h1>
-                    <a href="#"><img src="img/NARD_logo.png" alt="NARDlogo"></a>
+                    <a href="../index.html"><img src="img/NARD_logo.png" alt="NARDlogo"></a>
                 </h1>
                 <nav class="gnb-pc pc">
                     <ul class="gnb">
