--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <header id="header" class="header">
             <div class="inner">
                 <h1>
-                    <a href="#"><img src="img/NARD_logo.png" alt="NARDlogo"></a>
+                    <a href="./index.html"><img src="img/NARD_logo.png" alt="NARDlogo"></a>
                 </h1>
                 <nav class="gnb-pc pc">
                     <ul class="gnb">
@@ -37,14 +37,14 @@
                             <a href="#">BEST</a>
                         </li><!-- .depth01 end -->
                         <li class="depth01">
-                            <a href="#">CATEGORY</a>
+                            <a href="sub/category.html">CATEGORY</a>
                             <ul class="depth02">
-                                <li><a href="#">SKIN CARE</a></li>
-                                <li><a href="#">ORAL CARE</a></li>
-                                <li><a href="#">HIRE</a></li>
-                                <li><a href="#">BODY</a></li>
-                                <li><a href="#">BABY</a></li>
-                                <li><a href="#">LIFE STYLE</a></li>
+                                <li><a href="./sub/category.html">SKIN CARE</a></li>
+                                <li><a href="sub/category.html">ORAL CARE</a></li>
+                                <li><a href="sub/category.html">HIRE</a></li>
+                                <li><a href="sub/category.html">BODY</a></li>
+                                <li><a href="sub/category.html">BABY</a></li>
+                                <li><a href="sub/category.html">LIFE STYLE</a></li>
                             </ul><!-- .depth02 end -->
                         </li><!-- .depth01 end -->
                         <li class="depth01">
