--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <li class="depth01">
                                 <a href="#">BEST</a>
                             </li><!-- .depth01 end -->
-                            <li class="depth01">
+                            <li class="depth01 drop_menu">
                                 <a href="#">CATEGORY</a>
                                 <ul class="depth02">
                                     <li><a href="#">SKIN CARE</a></li>
@@ -108,7 +108,7 @@
                                     <li><a href="#">LIFE STYLE</a></li>
                                 </ul><!-- .depth02 end -->
                             </li><!-- .depth01 end -->
-                            <li class="depth01">
+                            <li class="depth01 drop_menu">
                                 <a href="#">COLLECTION</a>
                                 <ul class="depth02">
                                     <li><a href="#">SET</a></li>
